--- a/webroot/static/css/main.css
+++ b/webroot/static/css/main.css
@@ -26,6 +26,16 @@
     color: rgba(255,255,255,0.8);
 }
 
+h1.page-header .logo-text {
+    background:url(/static/images/safecoinfolio_logo_text.png) right center;
+    overflow: hidden;
+    font: 0/0 a;
+    display: inline-block;
+    width: 140px;
+    height: 22px;
+    background-size: 140px 25px;
+}
+
 h1.page-header {
   color: white;
   font-weight:800;
@@ -33,8 +43,9 @@ h1.page-header {
   -webkit-background-size: 48px;
   background-size: 48px;
   background-repeat: no-repeat;
-  padding: 8px 0 0 60px;
+  padding: 8px 0 0 55px;
   min-height: 48px;
+  margin-left:15px;
 }
 
 h2.sub {
