--- a/webroot/static/css/main.css
+++ b/webroot/static/css/main.css
@@ -50,10 +50,20 @@ h1.page-header {
 
 h2.sub {
     background: #efefef;
-    padding: 0 7% 0 7%;
+    padding: 0 40px 0 110px;
     margin: 0;
     font-weight: 500;
     font-size: 14px;
+}
+
+@media (max-width: 1024px) {
+   h2.sub {
+       padding: 0 40px 0 80px;
+   }
+}
+
+header .mdl-layout__header-row {
+    padding: 0 40px 0 90px;
 }
 
 .total_label {
